--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -6,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #f5f5f5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,5 +26,6 @@
 }
 
 body {
-  min-width: 20rem;
+  min-width: 28rem;
+  max-width: 34rem;
 }
